update love message for clarity and emotional depth

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
         <!-- Love Message -->
         <div class="love-message">
             <h1>Happy 20th birthday yaaa Ayeshaa</h1>
-            <p>Aku selalu sayang dan cinta kamuu apapun yang terjadi, balik lagi yaa ke aku</p>
+            <p>Aku selalu sayang dan cinta kamuu apapun yang terjadi, aku akan selalu menunggu kamu balik lagi. Aku bakal selalu memperbaiki diri buat Kamu</p>
         </div>
     </div>
 
